tests/sources/invalid/generics/generic_class_nested_unclosed_type_args.fire
// Missing closing '>' for a *nested* generic type argument inside a
// generic class instantiation.
class Pair<T, U> {
    a: T;
    b: U;

    fn Pair(a: T, b: U) {
        this.a = a;
        this.b = b;
    }
}

fn main() -> int32 {
    Pair<p: Pair<int32,int32 int32> = Pair(Pair(1, 2), 3);  //~ ERROR FS-PARSE-0010 @5
//~^ ERROR FS-PARSE-0010 @30
//~^^ ERROR FS-PARSE-0012 @39
    return 0;
}
